--- a/HTML & CSS/Latihan/style.css
+++ b/HTML & CSS/Latihan/style.css
@@ -1,7 +1,17 @@
+* {
+    box-sizing: border-box;
+}
+
+header {
+    display: inline;
+}
+
 body {
     font-family: "Jacquarda Bastarda 9", serif;
     font-weight: 400;
     font-style: normal;
+    margin: 0;
+    padding: 0;
 }
 
 h2 {
@@ -19,7 +29,7 @@ nav a {
     text-decoration: none;
 }
 
-a:hover {
+nav a:hover {
     font-weight: bold;
 }
 
@@ -27,4 +37,72 @@ footer {
     padding: 20px;
     color: white;
     background-color: #00a2c6;
+    text-align: center;
+    font-weight: bold;
+}
+
+.profile header {
+    text-align: center;
+}
+
+.featured-image {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.profile img {
+    width: 200px;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 green;
+    border-radius: 5px;
+    padding: 20px;
+    margin-top: 20px;
+}
+
+.jumbotron {
+    font-size: 20px;
+    padding: 60px;
+    background-color: #00c8eb;
+    text-align: center;
+    color: white;
+}
+
+nav li {
+    display: inline;
+    list-style-type: none;
+    margin-right: 20px;
+}
+
+nav {
+    background-color: #00a2c6;
+    padding: 5px;
+    position: sticky;
+    top: 0;
+}
+
+main {
+    padding: 20px;
+    overflow: auto;
+}
+
+#content {
+    float: left;
+    width: 75%;
+    padding-right: 20px;
+}
+
+aside {
+    float: right;
+    width: 25%;
+}
+
+@media screen and (max-width: 1000px) {
+    #content, aside {
+        width: 100%;
+        padding: 0;
+    }
 }
